compare page title

--- a/views/compare.ejs
+++ b/views/compare.ejs
@@ -11,12 +11,18 @@
 
 
     <div class="container">
-        <h1 class="section_title mt-5 text-center">
-            Compare loans from different banks
-        </h1>
-        <hr />
+        <div class="row">
+            <div class="col-md-12">
+                <h1 class="section_title text-center">
+                    Compare Bank Loans
+                </h1>
+                <p class="text-center">Compare the loans from different bank you've chosen below.</p>
+                <hr />
+            </div>
+        </div>
 
-        <div class="row mt-5">
+
+        <div class="row mt-4">
             <div class="col-md-4">
                 <div class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle p-0 compare-dropdown" href="javascript:;"
@@ -158,14 +164,14 @@
         </div>
         <div class="row mt-5">
             <div class="col-md-4">
-                <h4 class="sub-heading">
-                    Prime Home Loan
-                </h4>
+
                 <div class="compare-img-container">
                     <img src="/img/primebank.png">
                 </div>
+                <button type="button" class="btn btn-primary compare-apply">Apply now</button>
+
                 <h4 class="sub-heading-features mt-4">
-                    <i class="material-icons" style="font-size:20px;">description</i> Description
+                    <i class="material-icons" style="font-size:18px;">description</i> Description
                 </h4>
                 <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores mollitia incidunt ipsum.
@@ -175,7 +181,7 @@
                 <hr />
 
                 <h4 class="sub-heading-features">
-                    <i class="material-icons" style="font-size:20px;">trending_up
+                    <i class="material-icons" style="font-size:18px;">trending_up
                     </i> Interest Rate
                 </h4>
                 <p>
@@ -184,7 +190,7 @@
                 <hr />
 
                 <h4 class="sub-heading-features">
-                    <i class="material-icons" style="font-size:20px;">date_range</i> Tenure
+                    <i class="material-icons" style="font-size:18px;">date_range</i> Tenure
                 </h4>
                 <p>
                     - Upto 20 years
@@ -196,14 +202,14 @@
                 </p>
             </div>
             <div class="col-md-4">
-                <h4 class="sub-heading">
-                    Sunrise Home Loan
-                </h4>
+
                 <div class="compare-img-container">
                     <img src="/img/sunrisebank.jpg">
                 </div>
+                <button type="button" class="btn btn-primary compare-apply">Apply now</button>
+
                 <h4 class="sub-heading-features mt-4">
-                    <i class="material-icons" style="font-size:20px;">description</i> Description
+                    <i class="material-icons" style="font-size:18px;">description</i> Description
                 </h4>
                 <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores mollitia incidunt ipsum.
@@ -213,7 +219,7 @@
                 <hr />
 
                 <h4 class="sub-heading-features">
-                    <i class="material-icons" style="font-size:20px;">trending_up
+                    <i class="material-icons" style="font-size:18px;">trending_up
                     </i> Interest Rate
                 </h4>
                 <p>
@@ -222,7 +228,7 @@
                 <hr />
 
                 <h4 class="sub-heading-features">
-                    <i class="material-icons" style="font-size:20px;">date_range</i> Tenure
+                    <i class="material-icons" style="font-size:18px;">date_range</i> Tenure
                 </h4>
                 <p>
                     - Upto 20 years
@@ -234,14 +240,14 @@
                 </p>
             </div>
             <div class="col-md-4">
-                <h4 class="sub-heading">
-                    Siddhartha Home Loan
-                </h4>
+
                 <div class="compare-img-container">
                     <img src="/img/siddarthabank.png">
                 </div>
+                <button type="button" class="btn btn-primary compare-apply">Apply now</button>
+
                 <h4 class="sub-heading-features mt-4">
-                    <i class="material-icons" style="font-size:20px;">description</i> Description
+                    <i class="material-icons" style="font-size:18px;">description</i> Description
                 </h4>
                 <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores mollitia incidunt ipsum.
@@ -251,7 +257,7 @@
                 <hr />
 
                 <h4 class="sub-heading-features">
-                    <i class="material-icons" style="font-size:20px;">trending_up
+                    <i class="material-icons" style="font-size:18px;">trending_up
                     </i> Interest Rate
                 </h4>
                 <p>
@@ -260,7 +266,7 @@
                 <hr />
 
                 <h4 class="sub-heading-features">
-                    <i class="material-icons" style="font-size:20px;">date_range</i> Tenure
+                    <i class="material-icons" style="font-size:18px;">date_range</i> Tenure
                 </h4>
                 <p>
                     - Upto 20 years
@@ -271,6 +277,7 @@
                     <a href=""> Terms & Conditions</a>
                 </p>
             </div>
+
         </div>
 
     </div>
