--- a/views/_layouts/navbar.ejs
+++ b/views/_layouts/navbar.ejs
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-7">
-                <img src="https://assets.rumsan.com/askbhunte/assets/bhunte.png" style="width: 80px;">
+                <a href="/"><img src="https://assets.rumsan.com/askbhunte/assets/bhunte.png" style="width: 80px;"></a>
             </div>
             <div class="col-md-5 placeholder  ">
                 <button class="btn btn-primary btn-round m-2">
@@ -26,12 +26,14 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" href="javascript:;">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript:;">About Us</a>
+                    <a class="nav-link" href="#">About Us</a>
                 </li>
-
+                <li class="nav-item">
+                    <a class="nav-link" href="/compare">Compare Loans</a>
+                </li>
             </ul>
             <form class="form-inline ml-auto">
                 <div class="form-group has-white">
