--- a/public/materialui/assets/css/material-kit.css
+++ b/public/materialui/assets/css/material-kit.css
@@ -4160,9 +4160,9 @@ tbody.collapse.show {
 }
 
 .custom-select:focus {
-  border-color: #d176e1;
+  border-color: #0a1a4f;
   outline: 0;
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075), 0 0 5px rgba(209, 118, 225, 0.5);
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075), 0 0 5px rgba(10, 26, 79, 0.5);
 }
 
 .custom-select:focus::-ms-value {
